Finetune controllers to services changes & routing & imports clean up

--- a/mtg-app.csproj
+++ b/mtg-app.csproj
@@ -32,6 +32,10 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Account\Index.cshtml" />
+  </ItemGroup>
+
 <!--  <ItemGroup>
     <ProjectReference Include="..\mtg-lib\mtg-lib.csproj" />
   </ItemGroup>-->
